// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileLink should be rendered correctly 1`] = `
<DocumentFragment>
  <a
    class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 transition duration-150 ease-in-out"
    href="/no-active"
    role="menuitem"
  >
    Profile
  </a>
</DocumentFragment>
`;

exports[`ProfileLink should be rendered correctly when current is enabled 1`] = `
<DocumentFragment>
  <span
    class="block px-4 py-2 text-sm leading-5 font-black text-gray-700 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 transition duration-150 ease-in-out"
    role="menuitem"
  >
    Profile
  </span>
</DocumentFragment>
`;
